--- a/hw04.Rmd
+++ b/hw04.Rmd
@@ -1,9 +1,7 @@
 ---
 title: "Homework 4"
 output:
-  html_document:
-    toc: true
-    keep_md: true
+  github_document
 ---
 
 ```{r setup, include=FALSE}
